@@ -4521,3 +4521,4 @@ Start... early ages
 
 2013-03-06
 - bios/blkdev.c bios/blkdev.h bdos/fs.h bdos/fsdrive.c: Static cleanup. (RFB)
+- bdos/fsmain.c bdos/fsopnclo.c: Added some clarification comments. (RFB)
